issue #4 (simple dependency injection mechanis) closed
- added property injection support in cli (-p flag)